fix: Move Ex Nihilo Sequentia and Ex Deorum support to NeoForge